Closed Bug 428105 Opened 18 years ago Closed 18 years ago

CERT_SetOCSPTimeout is not defined in any public header file

Categories

(NSS :: Libraries, defect, P2)

3.12
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: christophe.ravel.bugs, Assigned: KaiE)

Details

Attachments

(1 file)

The CERT_SetOCSPTimeout function is exported in libnss.so (nss.def) but is not defined in any header file (see certhigh/ocsp.c). This function should be defined in a public header file.
This issue was introduced by the resolution of bug 406120.
Assignee: nobody → kengert
Priority: -- → P2
Target Milestone: --- → 3.12
Attached patch patch v1Splinter Review
Attachment #316854 - Flags: review?(nelson)
Comment on attachment 316854 [details] [diff] [review] patch v1 r=nelson
Attachment #316854 - Flags: review?(nelson) → review+
Checking in ocsp.h; /cvsroot/mozilla/security/nss/lib/certhigh/ocsp.h,v <-- ocsp.h new revision: 1.12; previous revision: 1.11
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
If you want this correctness fix on the 3.12.0 branch, please mark a second review.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: