Bug 428105, CERT_SetOCSPTimeout is not defined in any public header file r=nelson